Hide scrollbar to fix screen size

--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -1,5 +1,6 @@
 body {
     background: #4c97ca;
+    overflow: hidden;
 }
 
 /*Header Content*/
